* NEXT
- Fix hat rendering issue when the text is readonly.

* 1.0.1 [2025-02-18 Tue]
- Add usage example to README.
- Avoid throwing an error when a character has no glyph in the current
  font.
- Add screenshots to README.

* 1.0.0 [2025-02-15 Sat]
- MELPA release.

* 0.3.2 [2025-01-23 Thu]
- Fix slow hat allocation for multiply wrapped lines.

* 0.3.1 [2024-12-29 Sun]
- Hats are now rendered for non-alphanumeric characters as well.
- Added function ~hatty-locate-token-region~ for getting the region of
  the token that a hat is placed over.
- Added the rest of the hats available in cursorless.
- Fix character height for characters on wrapped lines.

* 0.3.0 [2024-09-25 Wed]
- When loading hatty, it will now try to pick colors appropriate for
  the color theme of the user.
- The defaut hat color and shape is now identified by the symbol
  ~default~.
- Hats are now properly rendered for the last word of links in
  org-mode.
- ~hatty-reallocate-hats~ has been renamed to ~hatty-reallocate~.
- ~hatty-request-reallocation~ has been added.  This function tries to
  avoid multiple rapid executions of ~hatty-reallocate~.
- ~hatty-with-hat-reallocate~ has been removed.

* 0.2.2 [2024-09-04 Wed]
- Fix rendering bug pertaining to the raise display property.
- Decrease required Emacs version to 26.1.

* 0.2.1 [2024-09-04 Wed]
- Update documentation.

* 0.2.0 [2024-08-31 Sat]
- Color specification is now made according to Emacs rules, not SVG.
- Customization variables may now be customized using ~customize~.
- ~hatty-mode~ is now buffer-local.  Use ~global-hatty-mode~ to enable
  it globally.
- Add autoload cookies for ~hatty-mode~ and ~global-hatty-mode~.

* 0.1.0 [2024-08-21 Wed]
Initial release.