@@ -1,5 +1,7 @@
 * NEXT
 - Fix hat rendering issue when the text is readonly.
+- Add penalty system to prioritize the use of styles easier to
+  reference.  (DOCUMENT THIS IN THE README)
 
 * 1.0.1 [2025-02-18 Tue]
 - Add usage example to README.
